--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Majored in Major Degree
+  uni: Based University
+  year: July, 2014 &mdash; August, 2049
   # awards:
-  # summary:
+  summary: I am a cool guy deal with it.
