--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -2,3 +2,6 @@
 - description: Travel
 - description: Animated cartoons involving restuarants and burgers
 - description: Amusement parks
+- description: Hockey
+- description: Tennis
+- description: Some other cool stuff
