--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -7,3 +7,7 @@
 # Leadership
 - skill: Leadership
   description: Managed multiple asynchronous teams in the development, maintenance, and release of various web applications and websites.
+  
+# Coding
+- skill: Coding
+  description: I'm totally good at coding and I have read over 1000000 books.
